--- a/ad04/templates/base.html
+++ b/ad04/templates/base.html
@@ -23,7 +23,7 @@
 <body>
 
 	<nav class="navbar custom-div navbar-expand-lg navbar-custom mb-4">
-		<a class="navbar-brand" id="navbar-name" href="#">
+		<a class="navbar-brand" id="navbar-name" href="{% url 'world_view' %}">
 			<img class="navbar-logo-img" src="{% static 'img/ad04_logo.png' %}">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
