--- a/world/templates/world/world_home.html
+++ b/world/templates/world/world_home.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 <div class="custom-div">
-	<p>World homepage works</p>
+	<form class="d-flex" method="POST" action="{% url 'search_location' %}">
+		{% csrf_token %}
+		<input class="form-control me-2" type="search" placeholder="Search location" aria-label="Search" name="searched">
+		<button class="btn btn-primary" type="submit">Search</button>
+	</form>
 </div>
 {% endblock %}
